--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 <style>.anim{visibility:hidden}</style>
 <style>html,body{-webkit-text-zoom:reset !important;-ms-text-size-adjust:none !important;-moz-text-size-adjust:none !important;-webkit-text-size-adjust:none !important}@font-face{font-display:block;font-family:"Playfair Display";src:url('css/PlayfairDisplay-Regular.woff2') format('woff2'),url('css/PlayfairDisplay-Regular.woff') format('woff');font-weight:400}@font-face{font-display:block;font-family:"Istok Web";src:url('css/IstokWeb-Regular.woff2') format('woff2'),url('css/IstokWeb-Regular.woff') format('woff');font-weight:400}@font-face{font-display:block;font-family:"EB Garamond";src:url('css/EBGaramond-Regular.woff2') format('woff2'),url('css/EBGaramond-Regular.woff') format('woff');font-weight:400}body>div{font-size:0}p, span,h1,h2,h3,h4,h5,h6{margin:0;word-spacing:normal;word-wrap:break-word;-ms-word-wrap:break-word;pointer-events:auto;max-height:1000000000px}sup{font-size:inherit;vertical-align:baseline;position:relative;top:-0.4em}sub{font-size:inherit;vertical-align:baseline;position:relative;top:0.4em}ul{display:block;word-spacing:normal;word-wrap:break-word;list-style-type:none;padding:0;margin:0;-moz-padding-start:0;-khtml-padding-start:0;-webkit-padding-start:0;-o-padding-start:0;-padding-start:0;-webkit-margin-before:0;-webkit-margin-after:0}li{display:block;white-space:normal}li p{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none}form{display:inline-block}a{text-decoration:inherit;color:inherit;-webkit-tap-highlight-color:rgba(0,0,0,0)}textarea{resize:none}.shm-l{float:left;clear:left}.shm-r{float:right;clear:right}.whitespacefix{word-spacing:-1px}#consentBanner{position:fixed;bottom:0;z-index:9999}html{font-family:sans-serif}body{font-size:0;margin:0}audio,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0;outline:0}b,strong{font-weight:700}dfn{font-style:italic}h1,h2,h3,h4,h5,h6{font-size:1em;line-height:1;margin:0}img{border:0}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=submit]{-webkit-appearance:button;cursor:pointer;box-sizing:border-box;white-space:normal}input[type=text],input[type=password],textarea{-webkit-appearance:none;appearance:none;box-sizing:border-box}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;box-sizing:border-box;border-color:#ddd}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}blockquote{margin-block-start:0;margin-block-end:0;margin-inline-start:0;margin-inline-end:0}:-webkit-full-screen-ancestor:not(iframe){-webkit-clip-path:initial!important}
 html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}@-webkit-keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}.fadeIn{-webkit-animation-name:fadeIn;animation-name:fadeIn}.animated{-webkit-animation-fill-mode:both;animation-fill-mode:both}.animated.infinite{-webkit-animation-iteration-count:infinite;animation-iteration-count:infinite}@-webkit-keyframes fadeInUp{from{opacity:0;-webkit-transform:translate3d(0,100%,0)}to{opacity:1;-webkit-transform:translate3d(0, 0, 0)}}@keyframes fadeInUp{from{opacity:0;transform:translate3d(0,100%,0)}to{opacity:1;transform:translate3d(0, 0, 0)}}.fadeInUp{-webkit-animation-name:fadeInUp;animation-name:fadeInUp}
-#b{background-color:#fff}.ps7{position:relative;margin-top:46px}.v3{display:block;*display:block;zoom:1;vertical-align:top}.s8{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:2564px}.v4{display:inline-block;*display:inline;zoom:1;vertical-align:top}.ps8{position:relative;margin-left:0;margin-top:0}.s9{min-width:960px;width:960px;min-height:441px}.w1{line-height:0}.s10{min-width:960px;width:960px;min-height:324px;height:324px}.c9{z-index:1;pointer-events:auto}.i6{position:absolute;left:0;width:960px;height:320px;top:2px;border:0}.i7{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps9{position:relative;margin-left:0;margin-top:-24px}.s11{min-width:595px;width:595px;min-height:141px}.c10{z-index:2;pointer-events:auto;overflow:hidden;height:141px}.p1{padding-top:0;text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f2{font-family:"Playfair Display";font-size:67px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:125px;letter-spacing:normal;text-shadow:none}.ps10{position:relative;margin-left:149px;margin-top:31px}.s12{min-width:662px;width:662px;min-height:526px;height:526px}.c11{z-index:5;pointer-events:auto}.a2{display:block}.i8{position:absolute;left:72px;width:518px;height:526px;top:0;border:0}.v5{display:none;*display:none;zoom:1;vertical-align:top}.s13{width:100%;min-width:960px;min-height:56px}.c12{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#c0c0c0;background-clip:padding-box}.ps12{position:relative;margin-top:12px}.s14{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:32px}.ps13{position:relative;margin-left:680px;margin-top:0}.s15{min-width:128px;width:128px;min-height:32px}.c13{pointer-events:auto}.f3{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none;text-indent:0;text-align:center;padding-top:7px;padding-bottom:6px;margin-top:0;margin-bottom:0}.btn2{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn2:hover{background-color:#82939e;border-color:#000;color:#000}.btn2:active{background-color:#52646f;border-color:#000;color:#fff}.v6{display:inline-block;overflow:hidden;outline:0}.s16{width:128px;padding-right:0;height:19px}.ps14{position:relative;margin-left:12px;margin-top:0}.btn3{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn3:hover{background-color:#82939e;border-color:#000;color:#000}.btn3:active{background-color:#52646f;border-color:#000;color:#fff}.ps15{position:relative;margin-left:12px;margin-top:-27px}.s17{min-width:648px;width:648px;min-height:21px}.c14{pointer-events:auto;overflow:hidden;height:21px}.f4{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}.f5{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}</style>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.e26219.css" media="print">
+#b{background-color:#fff}.ps8{position:relative;margin-top:46px}.v3{display:block;*display:block;zoom:1;vertical-align:top}.s9{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:2754px}.v4{display:inline-block;*display:inline;zoom:1;vertical-align:top}.ps9{position:relative;margin-left:0;margin-top:0}.s10{min-width:960px;width:960px;min-height:441px}.w1{line-height:0}.s11{min-width:960px;width:960px;min-height:324px;height:324px}.c10{z-index:1;pointer-events:auto}.i6{position:absolute;left:0;width:960px;height:320px;top:2px;border:0}.i7{width:100%;height:100%;display:inline-block;-webkit-transform:translate3d(0,0,0)}.ps10{position:relative;margin-left:0;margin-top:-24px}.s12{min-width:595px;width:595px;min-height:141px}.c11{z-index:2;pointer-events:auto;overflow:hidden;height:141px}.p2{padding-top:0;text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f3{font-family:"Playfair Display";font-size:67px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:125px;letter-spacing:normal;text-shadow:none}.ps11{position:relative;margin-left:149px;margin-top:31px}.s13{min-width:662px;width:662px;min-height:526px;height:526px}.c12{z-index:5;pointer-events:auto}.a2{display:block}.i8{position:absolute;left:72px;width:518px;height:526px;top:0;border:0}.v5{display:none;*display:none;zoom:1;vertical-align:top}.s14{width:100%;min-width:960px;min-height:56px}.c13{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#c0c0c0;background-clip:padding-box}.ps13{position:relative;margin-top:12px}.s15{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:32px}.ps14{position:relative;margin-left:680px;margin-top:0}.s16{min-width:128px;width:128px;min-height:32px}.c14{pointer-events:auto}.f4{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none;text-indent:0;text-align:center;padding-top:7px;padding-bottom:6px;margin-top:0;margin-bottom:0}.btn2{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn2:hover{background-color:#82939e;border-color:#000;color:#000}.btn2:active{background-color:#52646f;border-color:#000;color:#fff}.v6{display:inline-block;overflow:hidden;outline:0}.s17{width:128px;padding-right:0;height:19px}.ps15{position:relative;margin-left:12px;margin-top:0}.btn3{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn3:hover{background-color:#82939e;border-color:#000;color:#000}.btn3:active{background-color:#52646f;border-color:#000;color:#fff}.ps16{position:relative;margin-left:12px;margin-top:-27px}.s18{min-width:648px;width:648px;min-height:21px}.c15{pointer-events:auto;overflow:hidden;height:21px}.f5{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}.f6{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}</style>
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.5bb1c0.css" media="print">
 <!--[if lte IE 7]>
-<link rel="stylesheet" href="css/site.e26219-lteIE7.css" type="text/css">
+<link rel="stylesheet" href="css/site.5bb1c0-lteIE7.css" type="text/css">
 <![endif]-->
 </head>
 <body id="b">
-<div class="ps7 v3 s8">
-<div class="v4 ps8 s9 c8">
-<div class="v4 ps8 s9 w1">
-<div class="anim fadeIn js2 v4 ps8 s10 c9">
+<div class="ps8 v3 s9">
+<div class="v4 ps9 s10 c9">
+<div class="v4 ps9 s10 w1">
+<div class="anim fadeIn js2 v4 ps9 s11 c10">
 <picture class="i7">
 <source srcset="images/pas-960.webp 1x, images/pas-1920.webp 2x" type="image/webp">
 <source srcset="images/pas-960.jpg 1x, images/pas-1920.jpg 2x">
 <img src="images/pas-960.jpg" class="js1 i6">
 </picture>
 </div>
-<div class="v4 ps9 s11 c10">
-<p class="p1 f2">Featured Products</p>
+<div class="v4 ps10 s12 c11">
+<p class="p2 f3">Featured Products</p>
 </div>
 </div>
 </div>
-<div class="anim fadeInUp js4 v4 ps10 s12 c11">
+<div class="anim fadeInUp js4 v4 ps11 s13 c12">
 <a href="https://www.amazon.com/gp/product/B08WLH682R/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08WLH682R&linkCode=as2&tag=productsandsu-20&linkId=357b85b1337253734abf2dd70a25c0e5" target="_blank" rel="noopener" class="a2"><picture class="i7"><source srcset="images/wfh-tshirt-518.webp 1x, images/wfh-tshirt-1036.webp 2x" type="image/webp"><source srcset="images/wfh-tshirt-518.jpeg 1x, images/wfh-tshirt-1036.jpeg 2x"><img src="images/wfh-tshirt-518.jpeg" class="js3 i8"></picture></a>
 </div>
 <div class="anim fadeInUp js6 v1 ps1 s1 c1">
@@ -51,23 +51,26 @@ html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}@-web
 <a href="https://twitter.com/products_such" target="_blank" rel="noopener" class="a1"><img src="images/svg_2.svg" class="i5"></a>
 </div>
 </div>
-</div>
-<div id="consentBanner" class="v5 ps11 s13 c12">
-<div class="ps12 v3 s14">
-<div class="v4 ps13 s15 c13">
-<a href="#" class="denyConsent f3 btn2 v6 s16">Deny</a>
-</div>
-<div class="v4 ps14 s15 c13">
-<a href="#" class="allowConsent f3 btn3 v6 s16">OK</a>
-</div>
-<div class="v4 ps15 s17 c14">
-<p class="p1 f4">This website makes use of cookies. Please see our <span class="f5"><a class="noConsent" href="privacy-policy.html">privacy policy</a></span> for details.</p>
+<div class="v1 ps7 s8 c7">
+<p class="p1 f2">Products and Such is a participant in the Amazon Services LLC Associates Program, an affiliate advertising program designed to provide a way for websites to earn advertising revenues by advertising and linking to Amazon.com</p>
 </div>
 </div>
+<div id="consentBanner" class="v5 ps12 s14 c13">
+<div class="ps13 v3 s15">
+<div class="v4 ps14 s16 c14">
+<a href="#" class="denyConsent f4 btn2 v6 s17">Deny</a>
 </div>
-<div class="c7">
+<div class="v4 ps15 s16 c14">
+<a href="#" class="allowConsent f4 btn3 v6 s17">OK</a>
 </div>
-<script>dpth="/";!function(){var s=["js/woolite.fc2abd.js","js/jquery.fc2abd.js","js/consent.fc2abd.js","js/index.e26219.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,4==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
+<div class="v4 ps16 s18 c15">
+<p class="p2 f5">This website makes use of cookies. Please see our <span class="f6"><a class="noConsent" href="privacy-policy.html">privacy policy</a></span> for details.</p>
+</div>
+</div>
+</div>
+<div class="c8">
+</div>
+<script>dpth="/";!function(){var s=["js/woolite.fc2abd.js","js/jquery.fc2abd.js","js/consent.fc2abd.js","js/index.5bb1c0.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,4==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
 </script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
