--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,79 +6,79 @@
 <meta name="referrer" content="same-origin">
 <meta name="viewport" content="width=960">
 <style>html,body{-webkit-text-zoom:reset !important;-ms-text-size-adjust:none !important;-moz-text-size-adjust:none !important;-webkit-text-size-adjust:none !important}@font-face{font-display:block;font-family:"EB Garamond";src:url('css/EBGaramond-Regular.woff2') format('woff2'),url('css/EBGaramond-Regular.woff') format('woff');font-weight:400}body>div{font-size:0}p, span,h1,h2,h3,h4,h5,h6{margin:0;word-spacing:normal;word-wrap:break-word;-ms-word-wrap:break-word;pointer-events:auto;max-height:1000000000px}sup{font-size:inherit;vertical-align:baseline;position:relative;top:-0.4em}sub{font-size:inherit;vertical-align:baseline;position:relative;top:0.4em}ul{display:block;word-spacing:normal;word-wrap:break-word;list-style-type:none;padding:0;margin:0;-moz-padding-start:0;-khtml-padding-start:0;-webkit-padding-start:0;-o-padding-start:0;-padding-start:0;-webkit-margin-before:0;-webkit-margin-after:0}li{display:block;white-space:normal}li p{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none}form{display:inline-block}a{text-decoration:inherit;color:inherit;-webkit-tap-highlight-color:rgba(0,0,0,0)}textarea{resize:none}.shm-l{float:left;clear:left}.shm-r{float:right;clear:right}.whitespacefix{word-spacing:-1px}#consentBanner{position:fixed;bottom:0;z-index:9999}html{font-family:sans-serif}body{font-size:0;margin:0}audio,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0;outline:0}b,strong{font-weight:700}dfn{font-style:italic}h1,h2,h3,h4,h5,h6{font-size:1em;line-height:1;margin:0}img{border:0}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=submit]{-webkit-appearance:button;cursor:pointer;box-sizing:border-box;white-space:normal}input[type=text],input[type=password],textarea{-webkit-appearance:none;appearance:none;box-sizing:border-box}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}textarea{overflow:auto;box-sizing:border-box;border-color:#ddd}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}blockquote{margin-block-start:0;margin-block-end:0;margin-inline-start:0;margin-inline-end:0}:-webkit-full-screen-ancestor:not(iframe){-webkit-clip-path:initial!important}
-html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}#b{background-color:#fff}.ps16{position:relative;margin-top:18px}.v7{display:block;*display:block;zoom:1;vertical-align:top}.s18{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:534px}.v8{display:inline-block;*display:inline;zoom:1;vertical-align:top}.ps17{position:relative;margin-left:53px;margin-top:0}.s19{min-width:907px;width:907px;min-height:432px}.c15{z-index:1;pointer-events:auto;overflow:hidden;height:432px}.p2{padding-top:0;text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f6{font-family:"EB Garamond";font-size:11px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:14px;letter-spacing:normal;text-shadow:none}.ps18{position:relative;margin-left:12px;margin-top:30px}.s20{min-width:788px;width:788px;min-height:32px}.ps19{position:relative;margin-left:0;margin-top:0}.s21{min-width:128px;width:128px;min-height:32px}.c17{z-index:2;pointer-events:auto}.f7{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none;text-indent:0;text-align:center;padding-top:7px;padding-bottom:6px;margin-top:0;margin-bottom:0}.btn4{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn4:hover{background-color:#82939e;border-color:#000;color:#000}.btn4:active{background-color:#52646f;border-color:#000;color:#fff}.v9{display:inline-block;overflow:hidden;outline:0}.s22{width:128px;padding-right:0;height:19px}.ps20{position:relative;margin-left:12px;margin-top:10px}.s23{min-width:648px;width:648px;min-height:22px}.c18{z-index:3;pointer-events:auto;overflow:hidden;height:22px}.f8{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}.ps21{position:relative;margin-left:12px;margin-top:8px}.c19{z-index:4;pointer-events:auto}.btn5{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn5:hover{background-color:#82939e;border-color:#000;color:#000}.btn5:active{background-color:#52646f;border-color:#000;color:#fff}.c20{z-index:5;pointer-events:auto;overflow:hidden;height:22px}.v10{display:none;*display:none;zoom:1;vertical-align:top}.s24{width:100%;min-width:960px;min-height:56px}.c21{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#c0c0c0;background-clip:padding-box}.ps23{position:relative;margin-top:12px}.s25{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:32px}.ps24{position:relative;margin-left:680px;margin-top:0}.c22{pointer-events:auto}.btn6{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn6:hover{background-color:#82939e;border-color:#000;color:#000}.btn6:active{background-color:#52646f;border-color:#000;color:#fff}.ps25{position:relative;margin-left:12px;margin-top:0}.btn7{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn7:hover{background-color:#82939e;border-color:#000;color:#000}.btn7:active{background-color:#52646f;border-color:#000;color:#fff}.ps26{position:relative;margin-left:12px;margin-top:-27px}.s26{min-width:648px;width:648px;min-height:21px}.c23{pointer-events:auto;overflow:hidden;height:21px}.f9{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}.c24{display:inline-block;position:relative;margin-left:0;margin-top:0}</style>
-<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.e26219.css" media="print">
+html{-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale}#b{background-color:#fff}.ps17{position:relative;margin-top:18px}.v7{display:block;*display:block;zoom:1;vertical-align:top}.s19{pointer-events:none;min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:534px}.v8{display:inline-block;*display:inline;zoom:1;vertical-align:top}.ps18{position:relative;margin-left:53px;margin-top:0}.s20{min-width:907px;width:907px;min-height:432px}.c16{z-index:1;pointer-events:auto;overflow:hidden;height:432px}.p3{padding-top:0;text-indent:0;padding-bottom:0;padding-right:0;text-align:left}.f7{font-family:"EB Garamond";font-size:11px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:14px;letter-spacing:normal;text-shadow:none}.ps19{position:relative;margin-left:12px;margin-top:30px}.s21{min-width:788px;width:788px;min-height:32px}.ps20{position:relative;margin-left:0;margin-top:0}.s22{min-width:128px;width:128px;min-height:32px}.c18{z-index:2;pointer-events:auto}.f8{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none;text-indent:0;text-align:center;padding-top:7px;padding-bottom:6px;margin-top:0;margin-bottom:0}.btn4{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn4:hover{background-color:#82939e;border-color:#000;color:#000}.btn4:active{background-color:#52646f;border-color:#000;color:#fff}.v9{display:inline-block;overflow:hidden;outline:0}.s23{width:128px;padding-right:0;height:19px}.ps21{position:relative;margin-left:12px;margin-top:10px}.s24{min-width:648px;width:648px;min-height:22px}.c19{z-index:3;pointer-events:auto;overflow:hidden;height:22px}.f9{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:none;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}.ps22{position:relative;margin-left:12px;margin-top:8px}.c20{z-index:4;pointer-events:auto}.btn5{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn5:hover{background-color:#82939e;border-color:#000;color:#000}.btn5:active{background-color:#52646f;border-color:#000;color:#fff}.c21{z-index:5;pointer-events:auto;overflow:hidden;height:22px}.v10{display:none;*display:none;zoom:1;vertical-align:top}.s25{width:100%;min-width:960px;min-height:56px}.c22{pointer-events:none;border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#c0c0c0;background-clip:padding-box}.ps24{position:relative;margin-top:12px}.s26{min-width:960px;width:960px;margin-left:auto;margin-right:auto;min-height:32px}.ps25{position:relative;margin-left:680px;margin-top:0}.c23{pointer-events:auto}.btn6{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn6:hover{background-color:#82939e;border-color:#000;color:#000}.btn6:active{background-color:#52646f;border-color:#000;color:#fff}.ps26{position:relative;margin-left:12px;margin-top:0}.btn7{border:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#000;background-clip:padding-box;color:#fff}.btn7:hover{background-color:#82939e;border-color:#000;color:#000}.btn7:active{background-color:#52646f;border-color:#000;color:#fff}.ps27{position:relative;margin-left:12px;margin-top:-27px}.s27{min-width:648px;width:648px;min-height:21px}.c24{pointer-events:auto;overflow:hidden;height:21px}.f10{font-family:"EB Garamond";font-size:15px;font-weight:400;font-style:normal;text-decoration:underline;text-transform:none;color:#000;background-color:initial;line-height:19px;letter-spacing:normal;text-shadow:none}.c25{display:inline-block;position:relative;margin-left:0;margin-top:0}</style>
+<link onload="this.media='all';this.onload=null;" rel="stylesheet" href="css/site.5bb1c0.css" media="print">
 <!--[if lte IE 7]>
-<link rel="stylesheet" href="css/site.e26219-lteIE7.css" type="text/css">
+<link rel="stylesheet" href="css/site.5bb1c0-lteIE7.css" type="text/css">
 <![endif]-->
 </head>
 <body id="b">
-<div class="ps16 v7 s18">
-<div class="v8 ps17 s19 c15">
-<p class="p2 f6">Information that is gathered from visitors</p>
-<p class="p2 f6">In common with other websites, log files are stored on the web server saving details such as the visitor's IP address, browser type, referring page and time of visit.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Cookies may be used to remember visitor preferences when interacting with the website.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Where registration is required, the visitor's email and a username will be stored on the server.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">How the Information is used</p>
-<p class="p2 f6">The information is used to enhance the vistor's experience when using the website to display personalised content and possibly advertising.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">E-mail addresses will not be sold, rented or leased to 3rd parties.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">E-mail may be sent to inform you of news of our services or offers by us or our affiliates.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Visitor Options</p>
-<p class="p2 f6">If you have subscribed to one of our services, you may unsubscribe by following the instructions which are included in e-mail that you receive.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">You may be able to block cookies via your browser settings but this may prevent you from access to certain features of the website.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Cookies</p>
-<p class="p2 f6">Cookies are small digital signature files that are stored by your web browser that allow your preferences to be recorded when visiting the website. Also they may be used to track your return visits to the website.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">3rd party advertising companies may also use cookies for tracking purposes.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Google Ads</p>
-<p class="p2 f6">Google, as a third party vendor, uses cookies to serve ads.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Google's use of the DART cookie enables it to serve ads to visitors based on their visit to sites they visit on the Internet.</p>
-<p class="p2 f6"><br></p>
-<p class="p2 f6">Website visitors may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy.</p>
-</div>
+<div class="ps17 v7 s19">
 <div class="v8 ps18 s20 c16">
+<p class="p3 f7">Information that is gathered from visitors</p>
+<p class="p3 f7">In common with other websites, log files are stored on the web server saving details such as the visitor's IP address, browser type, referring page and time of visit.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Cookies may be used to remember visitor preferences when interacting with the website.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Where registration is required, the visitor's email and a username will be stored on the server.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">How the Information is used</p>
+<p class="p3 f7">The information is used to enhance the vistor's experience when using the website to display personalised content and possibly advertising.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">E-mail addresses will not be sold, rented or leased to 3rd parties.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">E-mail may be sent to inform you of news of our services or offers by us or our affiliates.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Visitor Options</p>
+<p class="p3 f7">If you have subscribed to one of our services, you may unsubscribe by following the instructions which are included in e-mail that you receive.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">You may be able to block cookies via your browser settings but this may prevent you from access to certain features of the website.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Cookies</p>
+<p class="p3 f7">Cookies are small digital signature files that are stored by your web browser that allow your preferences to be recorded when visiting the website. Also they may be used to track your return visits to the website.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">3rd party advertising companies may also use cookies for tracking purposes.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Google Ads</p>
+<p class="p3 f7">Google, as a third party vendor, uses cookies to serve ads.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Google's use of the DART cookie enables it to serve ads to visitors based on their visit to sites they visit on the Internet.</p>
+<p class="p3 f7"><br></p>
+<p class="p3 f7">Website visitors may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy.</p>
+</div>
 <div class="v8 ps19 s21 c17">
-<a class="noConsent denyConsent f7 btn4 v9 s22" href="#">Deny</a>
+<div class="v8 ps20 s22 c18">
+<a class="noConsent denyConsent f8 btn4 v9 s23" href="#">Deny</a>
 </div>
-<div class="v8 ps20 s23 c18">
-<p class="p2 f8">Sets a technical cookie recording you deny consent, you won't be asked again.</p>
-</div>
-</div>
-<div class="v8 ps21 s20 c16">
-<div class="v8 ps19 s21 c19">
-<a class="noConsent removeConsent f7 btn5 v9 s22" href="#">Remove</a>
-</div>
-<div class="v8 ps20 s23 c20">
-<p class="p2 f8">Removes the consent cookie from your browser.</p>
+<div class="v8 ps21 s24 c19">
+<p class="p3 f9">Sets a technical cookie recording you deny consent, you won't be asked again.</p>
 </div>
 </div>
+<div class="v8 ps22 s21 c17">
+<div class="v8 ps20 s22 c20">
+<a class="noConsent removeConsent f8 btn5 v9 s23" href="#">Remove</a>
 </div>
-<div id="consentBanner" class="v10 ps22 s24 c21">
-<div class="ps23 v7 s25">
-<div class="v8 ps24 s21 c22">
-<a class="noConsent denyConsent f7 btn6 v9 s22" href="#">Deny</a>
-</div>
-<div class="v8 ps25 s21 c22">
-<a class="noConsent allowConsent f7 btn7 v9 s22" href="#">OK</a>
-</div>
-<div class="v8 ps26 s26 c23">
-<p class="p2 f8">This website makes use of cookies. Please see our <span class="f9"><a class="noConsent" href="#">privacy policy</a></span> for details.</p>
+<div class="v8 ps21 s24 c21">
+<p class="p3 f9">Removes the consent cookie from your browser.</p>
 </div>
 </div>
 </div>
-<div class="c24">
+<div id="consentBanner" class="v10 ps23 s25 c22">
+<div class="ps24 v7 s26">
+<div class="v8 ps25 s22 c23">
+<a class="noConsent denyConsent f8 btn6 v9 s23" href="#">Deny</a>
 </div>
-<script>dpth="/";!function(){var s=["js/jquery.fc2abd.js","js/consent.fc2abd.js","js/privacy-policy.e26219.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,3==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
+<div class="v8 ps26 s22 c23">
+<a class="noConsent allowConsent f8 btn7 v9 s23" href="#">OK</a>
+</div>
+<div class="v8 ps27 s27 c24">
+<p class="p3 f9">This website makes use of cookies. Please see our <span class="f10"><a class="noConsent" href="#">privacy policy</a></span> for details.</p>
+</div>
+</div>
+</div>
+<div class="c25">
+</div>
+<script>dpth="/";!function(){var s=["js/jquery.fc2abd.js","js/consent.fc2abd.js","js/privacy-policy.5bb1c0.js"],n={},j=0,e=function(e){var o=new XMLHttpRequest;o.open("GET",s[e],!0),o.onload=function(){if(n[e]=o.responseText,3==++j)for(var t in s){var i=document.createElement("script");i.textContent=n[t],document.body.appendChild(i)}},o.send()};for(var o in s)e(o)}();
 </script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
